--- a/style.css
+++ b/style.css
@@ -1,3 +1,23 @@
 body {
-  background-color: blueviolet;
+  background-image:url(hatterem3.jpg) ;
+  color: white;
+}
+.tartalom {
+background-color: rgb(73, 71, 71);
+
+
+width: 80%;
+}
+
+.balkep {
+    float: left;
+}
+#jobbkep {
+    float: right;
+}
+.torol {
+    clear: both;
+}
+h1 {
+    text-align: center;
 }
